--- a/project1/webapp/view/FacilitiesDetails.view.xml
+++ b/project1/webapp/view/FacilitiesDetails.view.xml
@@ -17,6 +17,9 @@
         navButtonPress="BI_onButtonPress"
         showNavButton="true"
         title="Facility Details">
+         <m:headerContent>
+           <core:Fragment fragmentName="sap.ui.com.project1.fragment.Header" type="XML"/>
+        </m:headerContent>  
 		<ObjectPageLayout id="FD_id_ObjectPageLayout">
 			<sections>
 				<ObjectPageSection
