--- a/project1/webapp/view/MaintainData.view.xml
+++ b/project1/webapp/view/MaintainData.view.xml
@@ -9,27 +9,9 @@
     busyIndicatorDelay="0"
 >
     <Page showHeader="true">
-        <customHeader>
-            <Bar>
-                <contentLeft>
-                    <Button
-                        icon="sap-icon://nav-back"
-                        press=".onNavBack"
-                    />
-                    <Title
-                        text="Shah Hostel"
-                        class="customPageTitle"
-                    />
-                </contentLeft>
-                <contentRight>
-                    <Button
-                        icon="sap-icon://log"
-                        press=".onHome"
-                    />
-                </contentRight>
-            </Bar>
-        </customHeader>
-
+     <headerContent>
+	     <core:Fragment fragmentName="sap.ui.com.project1.fragment.Header" type="XML"/>
+		</headerContent>
         <content>
          <fb:FilterBar
                 id="MD_id_Filterbar"
