Refactor various controllers and views to improve loading indicators and streamline search functionality; update UI components for better user experience.

--- a/project1/webapp/view/Admin.view.xml
+++ b/project1/webapp/view/Admin.view.xml
@@ -95,6 +95,7 @@
                 sticky="ColumnHeaders,HeaderToolbar"
                 mode="SingleSelectLeft"
                 width="auto"
+                busyIndicatorDelay="0"
                 class="sapUiResponsiveMargin"
                 items="{path: 'HostelModel>/',  sorter: [{
                     path: 'RoomType',
