--- a/project1/webapp/view/Student_Details.view.xml
+++ b/project1/webapp/view/Student_Details.view.xml
@@ -118,7 +118,7 @@
                 id="idPOTable"
                 sticky="ColumnHeaders,HeaderToolbar"
                 mode="SingleSelectLeft"
-                width="auto"
+                width="auto" busyIndicatorDelay="0"
                 class="sapUiResponsiveMargin"
                 items="{path: 'POModel>/', sorter: {path: 'PoNumber', descending: true}}"
             >
