Edit part changes

--- a/project1/webapp/view/EditBookingDetails.view.xml
+++ b/project1/webapp/view/EditBookingDetails.view.xml
@@ -133,7 +133,7 @@
     >
         <f:SimpleForm
         id="idPersonalForm"
-            editable="false"
+            editable="true"
             layout="ColumnLayout"
             columnsM="1"
             columnsL="2"
