Header Text Value changes

--- a/project1/webapp/view/Book_Room.view.xml
+++ b/project1/webapp/view/Book_Room.view.xml
@@ -40,7 +40,7 @@
                                 class="sapUiSmallMarginBottom"
                             />
                             <Text
-                                text="10,000"
+                                text="{HostelModel>/FinalPrice} {HostelModel>/Currency}"
                                 class="largeTextBold"
                             />
                         </VBox>
@@ -50,7 +50,7 @@
                                 class="sapUiSmallMarginBottom"
                             />
                             <Text
-                                text="Single Bed"
+                                text="{=${HostelModel>/BedType} + ' - '  + ${HostelModel>/ACType}}"
                                 class="sapUiTinyMarginEnd largeTextBold"
                             />
                         </VBox> 
