--- a/project1/webapp/view/MaintainData.view.xml
+++ b/project1/webapp/view/MaintainData.view.xml
@@ -3,144 +3,81 @@
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m"
     xmlns:core="sap.ui.core"
-        xmlns:fb="sap.ui.comp.filterbar"
-    displayBlock="true"
-    height="100%"
-    busyIndicatorDelay="0"
 >
-    <Page showHeader="true">
-     <headerContent>
-	     <core:Fragment fragmentName="sap.ui.com.project1.fragment.Header" type="XML"/>
-		</headerContent>
-        <content>
-         <fb:FilterBar
-                id="MD_id_Filterbar"
-                persistencyKey="myPersKey"
-                useToolbar="false"
-                clear="MD_onPressClear"
-                showClearOnFB="true"
-                search="MD_onSearch"
-                showFilterConfiguration="false"
-                filterContainerWidth="auto"
-            >
-                <fb:filterGroupItems>
-                    <fb:FilterGroupItem
-                        name="Branch Code"
-                        label="Branch Code"
-                        groupName="Group"
-                        visibleInFilterBar="true"
-                    >
-                        <fb:control>
-                            <ComboBox
-                                id="MD_id_BranchCode"
-                                items="{mainModel>/}"
-                                showClearIcon="true"
-                            >
-                                <core:Item
-                                    key="{mainModel>BranchID}"
-                                    text="{mainModel>BranchID}"
-                                />
-                            </ComboBox>
-                        </fb:control>
-                    </fb:FilterGroupItem>
-                </fb:filterGroupItems>
-
-                <fb:filterGroupItems>
-                    <fb:FilterGroupItem
-                        name="Pincode"
-                        label="Pincode"
-                        groupName="Group"
-                        visibleInFilterBar="true"
-                    >
-                        <fb:control>
-                            <ComboBox
-                                id="MD_id_Pincode"
-                                items="{mainModel>/}"
-                                showClearIcon="true"
-                            >
-                                <core:ListItem
-                                    key="{mainModel>Pincode}"
-                                    text="{mainModel>Pincode}"
-                                />
-                            </ComboBox>
-                        </fb:control>
-                    </fb:FilterGroupItem>
-                </fb:filterGroupItems>
-            </fb:FilterBar>
-            <Table
-                id="id_MD_Table"
-                sticky="ColumnHeaders,HeaderToolbar"
-                mode="SingleSelectLeft"
-                width="auto"
-                class="sapUiResponsiveMargin"
-                items="{path: 'mainModel>/'}"
-            >
-                <headerToolbar>
-                    <OverflowToolbar>
-                        <Title text="Branch Details ({= ${mainModel>/}.length})" />
+    <Page id="page">
+        <customHeader>
+			<Bar>
+				<contentLeft>
+					<Button icon="sap-icon://nav-back" press=".onNavBack" />
+					<Title text="Shah Hostel" class="customPageTitle"/>
+				</contentLeft>
+				<contentRight>
+					<Button icon="sap-icon://log" press=".onHome" />
+				</contentRight>
+			</Bar>
+		</customHeader>
+        <SplitContainer
+            id="SplitContDemo"
+            initialDetail="detail"
+            initialMaster="master"
+        >
+            <detailPages>
+                <Page
+                    id="detail"
+                    title="Table Details ({= ${dataModel>/}.length })"
+                    backgroundDesign="Solid"
+                    showNavButton="{= !${device>/system/desktop} }"
+                    navButtonPress=".onPressDetailBack"
+                >
+                    <headerContent>
                         <ToolbarSpacer />
                         <Button
                             text="Add"
-                            press="MD_AddButtonPress"
-                            type="Accept"
+                            press="MD_onAddButtonPress"
                         />
                         <Button
                             text="Edit"
-                            press="MD_UpdateTableRow"
-                            type="Ghost"
+                            press="MD_onEditButtonPress"
                         />
                         <Button
                             text="Delete"
-                            press="MD_DeleteRow"
-                            type="Reject"
+                            press="MD_onDeleteButtonPress"
                         />
                         <Button
-                        press="MD_onDownload"
-                        type="Transparent"
-                        text="Download"
-                    />
-                    </OverflowToolbar>
-                </headerToolbar>
-
-                <columns>
-                    <Column demandPopin="true">
-                        <Text text="Branch Code" />
-                    </Column>
-                    <Column demandPopin="true">
-                        <Text text="Branch Name" />
-                    </Column>
-                    <Column
-                        minScreenWidth="Tablet"
-                        demandPopin="true"
+                            text="Download"
+                            press="MD_onDownloadButtonPress"
+                        />
+                    </headerContent>
+                    <ScrollContainer
+                        id="scrollContainer"
+                        horizontal="true"
+                        vertical="true"
+                        width="100%"
+                        height="100%"
                     >
-                        <Text text="Address" />
-                    </Column>
-                    <Column
-                        minScreenWidth="Tablet"
-                        demandPopin="true"
-                    >
-                        <Text text="Pincode" />
-                    </Column>
-                    <Column
-                        minScreenWidth="Tablet"
-                        demandPopin="true"
-                    >
-                        <Text text="Contact Number" />
-                    </Column>
-                </columns>
-
-                <items>
-                    <ColumnListItem>
-                        <cells>
-                            <Text text="{mainModel>BranchID}" />
-                            <Text text="{mainModel>Name}" />
-                            <Text text="{mainModel>Address}" />
-                            <Text text="{mainModel>Pincode}" />
-                            <Text text="{mainModel>Contact}" />
-                        </cells>
-                    </ColumnListItem>
-                </items>
-            </Table>
-        </content>
+                    <VBox width="100%" height="100%" id="detailContainer" />
+                     </ScrollContainer>
+                </Page>
+            </detailPages>
+            <masterPages>
+                <Page title="Table Names">
+                    
+                        <List
+                            items="{ path: 'EntityModel>/'}"
+                            itemPress=".onEntitySelect"
+                            mode="SingleSelectMaster"
+                        >
+                            <StandardListItem
+                                title="{EntityModel>DisplayName}"
+                                description="{ProductId}"
+                                icon="{ProductPicUrl}"
+                                iconDensityAware="false"
+                                iconInset="false"
+                                type="Active"
+                            />
+                        </List>
+                </Page>
+            </masterPages>
+        </SplitContainer>
     </Page>
-</mvc:View> 
+</mvc:View>
