--- a/project1/webapp/view/Bed_Images.view.xml
+++ b/project1/webapp/view/Bed_Images.view.xml
@@ -21,7 +21,10 @@
         title="Bed Details"
     >
         <m:headerContent>
-           <core:Fragment fragmentName="sap.ui.com.project1.fragment.Header" type="XML"/>
+            <core:Fragment
+                fragmentName="sap.ui.com.project1.fragment.Header"
+                type="XML"
+            />
         </m:headerContent>
         <ObjectPageLayout id="ObjectPageLayout">
             <!-- <headerTitle><ObjectPageDynamicHeaderTitle><expandedHeading><m:Title text="{objectModel>/0/PurchaseOrder/0/CustomerName}" wrapping="true" /></expandedHeading><snappedHeading /></ObjectPageDynamicHeaderTitle></headerTitle><headerContent><m:FlexBox wrap="Wrap" fitContainer="true"><m:Avatar class="sapUiSmallMarginEnd" src="../image/logo.jpeg" displaySize="L" /><layout:VerticalLayout class="sapUiSmallMarginBeginEnd"><m:ObjectIdentifier title="Customer Address" text="{objectModel>/0/PurchaseOrder/0/Address}" tooltip="Customer Address" /></layout:VerticalLayout><layout:VerticalLayout class="sapUiSmallMarginBeginEnd"><m:ObjectIdentifier title="PAN Number" text="{objectModel>/0/PurchaseOrder/0/PAN}" tooltip="PAN Number" /></layout:VerticalLayout><layout:VerticalLayout class="sapUiSmallMarginBeginEnd"><m:ObjectIdentifier title="Type" text="{objectModel>/0/PurchaseOrder/0/Type}" tooltip="Type" /></layout:VerticalLayout></m:FlexBox></headerContent> -->
@@ -162,75 +165,71 @@
                     <subSections>
                         <ObjectPageSubSection id="POO_Purchaseordersection">
                             <blocks>
-                             <m:HBox
-    id="idImagesContainer"
-    wrap="true"
-    justifyContent="Start"
-    alignItems="Start"
-    class="sapUiSmallMargin"
-    items="{DisplayImagesModel>/DisplayImages}"
->
-    <m:VBox
-        class="sapUiSmallMarginEnd"
-        width="150px"
-        alignItems="Center"
-        justifyContent="Center"
-    >
-        <!-- Normal Image Display -->
-        <m:Image
-            src="{DisplayImagesModel>src}"
-            width="120px"
-            height="120px"
-            press="onImagePress"
-            visible="{= ${DisplayImagesModel>isPlaceholder} === false }"
-        />
+                                <m:HBox
+                                    id="idImagesContainer"
+                                    wrap="Wrap"
+                                    justifyContent="Start"
+                                    alignItems="Start"
+                                    class="sapUiSmallMargin"
+                                    items="{DisplayImagesModel>/DisplayImages}"
+                                >
+                                    <m:VBox
+                                        class="sapUiSmallMarginEnd"
+                                        width="150px"
+                                        alignItems="Center"
+                                        justifyContent="Center"
+                                    >
+                                        <!-- Normal Image Display -->
+                                        <m:Image
+                                            src="{DisplayImagesModel>src}"
+                                            width="120px"
+                                            height="120px"
+                                            press="onImagePress"
+                                            visible="{= ${DisplayImagesModel>isPlaceholder} === false }"
+                                        />
 
-        <!-- Placeholder Box (visible only when no image) -->
-        <m:VBox
-            visible="{= ${DisplayImagesModel>isPlaceholder} === true &amp;&amp; ${editable>/Edit} === true }"
-            width="120px"
-            height="120px"
-            alignItems="Center"
-            justifyContent="Center"
-          
-                     class="placeholderBox"
-        >
-            <u:FileUploader
-            id="fileUploader"
-            icon="sap-icon://add"
-            width="120px"
-            style="Transparent"
-            tooltip="Add Image"
-            placeholder=" "
-            buttonOnly="true"
-            sameFilenameAllowed="true"
-            visible="{= ${DisplayImagesModel>isPlaceholder} === true &amp;&amp; ${editable>/Edit} === true }"
-            change=".onFileSelected"
-        />
-        </m:VBox>
+                                        <!-- Placeholder Box (visible only when no image) -->
+                                        <m:VBox
+                                            visible="{= ${DisplayImagesModel>isPlaceholder} === true &amp;&amp; ${editable>/Edit} === true }"
+                                            width="120px"
+                                            height="120px"
+                                            alignItems="Center"
+                                            justifyContent="Center"
+                                            class="placeholderBox"
+                                        >
+                                            <u:FileUploader
+                                                id="fileUploader"
+                                                icon="sap-icon://add"
+                                                width="120px"
+                                                style="Transparent"
+                                                tooltip="Add Image"
+                                                placeholder=" "
+                                                buttonOnly="true"
+                                                sameFilenameAllowed="true"
+                                                visible="{= ${DisplayImagesModel>isPlaceholder} === true &amp;&amp; ${editable>/Edit} === true }"
+                                                change=".onFileSelected"
+                                            />
+                                        </m:VBox>
 
-       
+                                        <!-- File name -->
+                                        <m:Text
+                                            text="{DisplayImagesModel>fileName}"
+                                            textAlign="Center"
+                                            wrapping="true"
+                                            visible="{= ${DisplayImagesModel>isPlaceholder} === false }"
+                                        />
 
-        <!-- File name -->
-        <m:Text
-            text="{DisplayImagesModel>fileName}"
-            textAlign="Center"
-            wrapping="true"
-            visible="{= ${DisplayImagesModel>isPlaceholder} === false }"
-        />
-
-        <!-- Delete icon -->
-        <m:Button
-            icon="sap-icon://delete"
-            type="Reject"
-            visible="{= ${editable>/Edit} === true &amp;&amp; ${DisplayImagesModel>isPlaceholder} === false }"
-            press=".onDeleteImage"
-            tooltip="Delete Image"
-            width="100%"
-        />
-    </m:VBox>
-</m:HBox>
-
+                                        <!-- Delete icon -->
+                                        <m:Button
+                                            icon="sap-icon://delete"
+                                            type="Reject"
+                                            visible="{= ${editable>/Edit} === true &amp;&amp; ${DisplayImagesModel>isPlaceholder} === false }"
+                                            press=".onDeleteImage"
+                                            tooltip="Delete Image"
+                                            width="100%"
+                                        />
+                                    </m:VBox>
+                                </m:HBox>
                             </blocks>
                         </ObjectPageSubSection>
                     </subSections>
