--- a/project1/webapp/view/Facilitis.view.xml
+++ b/project1/webapp/view/Facilitis.view.xml
@@ -1,20 +1,24 @@
 <mvc:View
     controllerName="sap.ui.com.project1.controller.Facilitis"
-	xmlns:mvc="sap.ui.core.mvc"
-	xmlns="sap.m"
-	xmlns:m="sap.m"
-	xmlns:c="sap.ui.core"
-	xmlns:fb="sap.ui.comp.filterbar"
-	xmlns:core="sap.ui.core"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m"
+    xmlns:m="sap.m"
+    xmlns:c="sap.ui.core"
+    xmlns:fb="sap.ui.comp.filterbar"
+    xmlns:core="sap.ui.core"
     displayBlock="true"
     height="100%"
-    busyIndicatorDelay="0">
-	<Page showHeader="true">
-	 <headerContent>
-	     <core:Fragment fragmentName="sap.ui.com.project1.fragment.Header" type="XML"/>
-		</headerContent>
-		<content>
-			<fb:FilterBar
+    busyIndicatorDelay="0"
+>
+    <Page showHeader="true">
+        <headerContent>
+            <core:Fragment
+                fragmentName="sap.ui.com.project1.fragment.Header"
+                type="XML"
+            />
+        </headerContent>
+        <content>
+            <fb:FilterBar
                 id="FO_id_FilterbarEmployee"
                 persistencyKey="myPersKey"
                 useToolbar="false"
@@ -26,87 +30,100 @@
                 showFilterConfiguration="false"
                 filterContainerWidth="auto"
             >
-				<fb:filterGroupItems>
-					<fb:FilterGroupItem
+                <fb:filterGroupItems>
+                    <fb:FilterGroupItem
                         name="Facility Name"
                         label="Facility Name"
                         groupName="Group"
                         visibleInFilterBar="true"
                     >
-						<fb:control>
-							<ComboBox
+                        <fb:control>
+                            <ComboBox
                                 id="FN_id_FacilityName"
                                 items="{Facilities>/}"
                                 showClearIcon="true"
                             >
-								<core:Item
+                                <core:Item
                                     key="{Facilities>FacilityName}"
                                     text="{Facilities>FacilityName}"
                                 />
-							</ComboBox>
-						</fb:control>
-					</fb:FilterGroupItem>
-				</fb:filterGroupItems>
-				<fb:filterGroupItems>
-					<fb:FilterGroupItem
+                            </ComboBox>
+                        </fb:control>
+                    </fb:FilterGroupItem>
+                </fb:filterGroupItems>
+                <fb:filterGroupItems>
+                    <fb:FilterGroupItem
                         name="Branch Code"
                         label="Branch Code"
                         groupName="Group"
                         visibleInFilterBar="true"
                     >
-						<fb:control>
-							<ComboBox
+                        <fb:control>
+                            <ComboBox
                                 id="FN_id_BranchCode"
                                 items="{Facilities>/}"
                                 showClearIcon="true"
                             >
-								<core:ListItem
+                                <core:ListItem
                                     key="{Facilities>BranchCode}"
                                     text="{Facilities>BranchCode}"
                                 />
-							</ComboBox>
-						</fb:control>
-					</fb:FilterGroupItem>
-				</fb:filterGroupItems>
-			</fb:FilterBar>
-			<Table
+                            </ComboBox>
+                        </fb:control>
+                    </fb:FilterGroupItem>
+                </fb:filterGroupItems>
+            </fb:FilterBar>
+            <Table
                 id="id_facilityTable"
                 sticky="ColumnHeaders,HeaderToolbar"
                 mode="MultiSelect"
                 width="auto"
                 busyIndicatorDelay="0"
                 class="sapUiResponsiveMargin"
-				items="{path: 'Facilities>/', sorter: {path: 'BranchCode',descending: false,group: true}}"
-                >
-				<headerToolbar>
-					<OverflowToolbar>
-						<Title text="Facilities ({=${Facilities>/}.length})" />
-						<ToolbarSpacer />
-						<Button text="Add Facility" press="FD_RoomDetails" type="Accept"/>
-						<Button text="Delete" press="HM_DeleteDetails" type="Reject" />
-					</OverflowToolbar>
-				</headerToolbar>
-				<columns>
-					<Column demandPopin="true">
-						<Text text="Facility Name" />
-					</Column>
-					<Column demandPopin="true">
-						<Text text="Type" />
-					</Column>
-					<Column  demandPopin="true">
-						<Text text="Price" />
-					</Column>
-				</columns>
-				<items>
-					<ColumnListItem type="Navigation" press="FD_onFacilityRowPress"> 
-						<cells>
-							<Text text="{Facilities>FacilityName}" />
-							<Text text="{Facilities>Type}" />
-							<Text text="{= ${Facilities>Price} ? ${Facilities>Price}+ ' ' + ${Facilities>Currency} + ' ' + ${Facilities>UnitText} : '' }"/>
-						</cells>
-					</ColumnListItem>
-				</items>
-			</Table>
-		</content>
-	</Page>
+                items="{path: 'Facilities>/', sorter: {path: 'BranchCode',descending: false,group: true}}"
+            >
+                <headerToolbar>
+                    <OverflowToolbar>
+                        <Title text="Facilities ({=${Facilities>/}.length})" />
+                        <ToolbarSpacer />
+                        <Button
+                            text="Add Facility"
+                            press="FD_RoomDetails"
+                            type="Accept"
+                        />
+                        <Button
+                            text="Delete"
+                            press="HM_DeleteDetails"
+                            type="Reject"
+                        />
+                    </OverflowToolbar>
+                </headerToolbar>
+                <columns>
+                    <Column demandPopin="true">
+                        <Text text="Facility Name" />
+                    </Column>
+                    <Column demandPopin="true">
+                        <Text text="Type" />
+                    </Column>
+                    <Column demandPopin="true">
+                        <Text text="Price" />
+                    </Column>
+                </columns>
+                <items>
+                    <ColumnListItem
+                        type="Navigation"
+                        press="FD_onFacilityRowPress"
+                    >
+                        <cells>
+                            <Text text="{Facilities>FacilityName}" />
+                            <Text text="{Facilities>Type}" />
+                            <Text
+                                text="{= ${Facilities>Price} ? ${Facilities>Price}+ ' ' + ${Facilities>Currency} + ' ' + ${Facilities>UnitText} : '' }"
+                            />
+                        </cells>
+                    </ColumnListItem>
+                </items>
+            </Table>
+        </content>
+    </Page>
 </mvc:View>
