Admin portal bugs solved

--- a/project1/webapp/view/Hostel.view.xml
+++ b/project1/webapp/view/Hostel.view.xml
@@ -244,53 +244,65 @@
                                     </fb:FilterGroupItem>
                                 </fb:filterGroupItems>
                             </fb:FilterBar>
-                            
+
                             <FlexBox
                                 id="idBedTypeFlex"
                                 wrap="Wrap"
                                 direction="Row"
                                 justifyContent="SpaceAround"
                                 alignItems="Start"
-                                items="{path: 'VisibilityModel>/BedTypes'}">
+                                items="{path: 'VisibilityModel>/BedTypes'}"
+                            >
                                 <items>
                                     <VBox
                                         class="bedCard sapUiMediumMargin"
-                                        visible="{VisibilityModel>Visible}">
+                                        visible="{VisibilityModel>Visible}"
+                                    >
                                         <Carousel
-                                height="300px"
-                                width="100%"
-                                loop="true"
-                                showPageIndicator="false"
-                                backgroundDesign="Transparent"
-                                pages="{VisibilityModel>Images}">
+                                            height="300px"
+                                            width="100%"
+                                            loop="true"
+                                            showPageIndicator="false"
+                                            backgroundDesign="Transparent"
+                                            pages="{VisibilityModel>Images}"
+                                        >
                                             <pages>
                                                 <Image
-                                        src="{VisibilityModel>src}"
-                                        width="100%"
-                                        height="300px"
-                                        class="bedCardImage"
-                                        decorative="false"
-                                    />
+                                                    src="{VisibilityModel>src}"
+                                                    width="100%"
+                                                    height="300px"
+                                                    class="bedCardImage"
+                                                    decorative="false"
+                                                />
                                             </pages>
                                         </Carousel>
-                                        <VBox class="bedCardContent sapUiSmallMargin">
+                                        <VBox
+                                            class="bedCardContent sapUiSmallMargin"
+                                        >
                                             <Text
                                                 text="{= ${VisibilityModel>Name} + ' (' + ${VisibilityModel>ACType} + ')' }"
-                                                class="bedCardTitle" />
+                                                class="bedCardTitle"
+                                            />
                                             <Text
                                                 text="{VisibilityModel>Description}"
                                                 class="bedCardDesc"
-                                                wrapping="true" />
+                                                wrapping="true"
+                                            />
                                             <Text
                                                 text="{= ${VisibilityModel>Currency} + ${VisibilityModel>Price}}"
-                                                class="bedCardPrice sapUiSmallMarginTop" />
-                                            <HBox justifyContent="Center" alignItems="Center" >
+                                                class="bedCardPrice sapUiSmallMarginTop"
+                                            />
+                                            <HBox
+                                                justifyContent="Center"
+                                                alignItems="Center"
+                                            >
                                                 <Button
                                                     text="{= ${VisibilityModel>Visible} ? 'View Details' : 'Occupied' }"
                                                     type="Default"
                                                     press=".viewDetails"
                                                     enabled="{VisibilityModel>Visible}"
-                                                    class="{= ${VisibilityModel>Visible} ? '' : 'soldOutButton' }" />
+                                                    class="{= ${VisibilityModel>Visible} ? '' : 'soldOutButton' }"
+                                                />
                                             </HBox>
                                         </VBox>
                                     </VBox>
