--- a/project1/webapp/view/MaintainData.view.xml
+++ b/project1/webapp/view/MaintainData.view.xml
@@ -3,6 +3,7 @@
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m"
     xmlns:core="sap.ui.core"
+    busyIndicatorDelay="0"
 >
     <Page id="page">
         <customHeader>
