Enhance search functionality and error handling in Bed and Room controllers; update UI elements for better user experience

--- a/project1/webapp/view/Hostel.view.xml
+++ b/project1/webapp/view/Hostel.view.xml
@@ -283,10 +283,11 @@
                                                 text="{= ${VisibilityModel>Name} + ' (' + ${VisibilityModel>ACType} + ')' }"
                                                 class="bedCardTitle"
                                             />
-                                            <Text
+                                            <ExpandableText
                                                 text="{VisibilityModel>Description}"
                                                 class="bedCardDesc"
                                                 wrapping="true"
+                                                maxCharacters="105"
                                             />
                                             <Text
                                                 text="{= ${VisibilityModel>Currency} + ${VisibilityModel>Price}}"
